projects/vb6parse/snapshots/syntax/library/statements/stop/stop_preserves_whitespace.snap
---
source: projects/vb6parse/src/syntax/library/statements/system_interaction/stop.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: StopStatement
      children:
        - kind: StopKeyword
          text: Stop
        - kind: Whitespace
          text: "    "
    - kind: Newline
      text: "\n"
