projects/vb6parse/snapshots/syntax/library/statements/stop/stop_with_doevents.snap
---
source: projects/vb6parse/src/syntax/library/statements/system_interaction/stop.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: ForStatement
      children:
        - kind: ForKeyword
          text: For
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: i
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: NumericLiteralExpression
          children:
            - kind: IntegerLiteral
              text: "1"
        - kind: Whitespace
          text: " "
        - kind: ToKeyword
          text: To
        - kind: Whitespace
          text: " "
        - kind: NumericLiteralExpression
          children:
            - kind: IntegerLiteral
              text: "1000"
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: CallStatement
              children:
                - kind: Identifier
                  text: DoEvents
                - kind: Newline
                  text: "\n"
            - kind: IfStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: IfKeyword
                  text: If
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: ShouldDebug
                - kind: Whitespace
                  text: " "
                - kind: ThenKeyword
                  text: Then
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: StopStatement
                      children:
                        - kind: Whitespace
                          text: "        "
                        - kind: StopKeyword
                          text: Stop
                    - kind: Newline
                      text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: EndKeyword
                  text: End
                - kind: Whitespace
                  text: " "
                - kind: IfKeyword
                  text: If
                - kind: Newline
                  text: "\n"
        - kind: NextKeyword
          text: Next
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: i
        - kind: Newline
          text: "\n"
